feat(core): normalize product model and finalize readonly integrations